# truss

./: .editorconfig  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  README.md  SECURITY.md  justfile  makefile
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  pages.yml  release.yml
benchmarks/fixtures/: complex-dynamic.yml  complex-static.yml  medium.yml  readme.md
benchmarks/hyperfine/: compare.md
competitors/: README.md
competitors/actionlint/: capture.sh  run.sh
competitors/yaml-language-server/: capture.sh  run.sh
competitors/yamllint/: capture.sh  run.sh
crates/truss-cli/: Cargo.toml
crates/truss-cli/src/: main.rs
crates/truss-core/: Cargo.toml  ast.rs  config.rs  lib.rs  parser.rs  validation.rs
crates/truss-core/benches/: parse.rs
crates/truss-core/tests/: validation_action_reference.rs  validation_artifact.rs  validation_benchmark_fixtures.rs  validation_comment_handling.rs  validation_concurrency.rs  validation_defaults.rs  validation_deprecated_commands.rs  validation_environment.rs  validation_event_payload.rs  validation_expression.rs  validation_expression_edge_cases.rs  validation_false_positives.rs  validation_job_container.rs  validation_job_if_expression.rs  validation_job_name.rs  validation_job_needs.rs  validation_job_outputs.rs  validation_job_strategy.rs  validation_matrix.rs  validation_non_empty.rs  validation_permissions.rs  validation_reusable_workflow_call.rs  validation_runner_label.rs  validation_runs_on.rs  validation_schema.rs  validation_script_injection.rs  validation_secrets.rs  validation_step.rs  validation_step_continue_on_error.rs  validation_step_env.rs  validation_step_id_uniqueness.rs  validation_step_if_expression.rs  validation_step_name.rs  validation_step_output_reference.rs  validation_step_shell.rs  validation_step_timeout.rs  validation_step_working_directory.rs  validation_syntax.rs  validation_timeout.rs  validation_workflow_call_inputs.rs  (+5 more)
crates/truss-core/validation/: mod.rs  utils.rs
crates/truss-core/validation/rules/: action_reference.rs  artifact.rs  concurrency.rs  defaults.rs  deprecated_commands.rs  environment.rs  event_payload.rs  expression.rs  job_container.rs  job_if_expression.rs  job_name.rs  job_needs.rs  job_outputs.rs  job_strategy.rs  matrix.rs  mod.rs  non_empty.rs  permissions.rs  reusable_workflow_call.rs  runner_label.rs  runs_on.rs  schema.rs  script_injection.rs  secrets.rs  step.rs  step_continue_on_error.rs  step_env.rs  step_id_uniqueness.rs  step_if_expression.rs  step_name.rs  step_output_reference.rs  step_shell.rs  step_timeout.rs  step_working_directory.rs  syntax.rs  timeout.rs  workflow_call_inputs.rs  workflow_call_outputs.rs  workflow_call_secrets.rs  workflow_inputs.rs  (+2 more)
crates/truss-lsp/: Cargo.toml  lib.rs
crates/truss-lsp/src/: main.rs
crates/truss-wasm/: Cargo.toml  lib.rs
crates/truss-wasm/wasm-shim/: assert.h  ctype.h  endian.h  inttypes.h  limits.h  stdarg.h  stdio.h  stdlib.h  string.h  time.h  unistd.h  wctype.h
docs/: ARCHITECTURE.md  CODE_REVIEW.md  LAUNCH_SOCIAL_MEDIA.md  PLANNED_IMPROVEMENTS.md  PUBLISHING.md  TEST_STRATEGY.md  VALIDATION_RULES.md
editors/vscode/: README.md  package-lock.json  package.json
editors/vscode/src/: extension.ts
playground/: README.md  env.js  index.html
scripts/: compare-competitors.sh  compare-results.py  debug-results.sh  discover-competitors.sh  discover-workflows.sh  generate-report.py  manage-repos.sh  run-full-suite.sh  run-validation.sh  setup-test-repos.sh  test-framework.sh  test-validation.sh
src/: main.rs
test-suite/: .gitignore  IMPLEMENTATION.md  QUICK_START.md  README.md  repos.json
test-suite/comparison-test/: coverage.json
test-suite/comparison-test/reports/: summary.html  summary.md
test-suite/results-test/actionlint/: complex_dynamic_yml.json  medium_yml.json
test-suite/results-test/truss/: complex_dynamic_yml.json  complex_static_yml.json  medium_yml.json  simple_yml.json
test-suite/results-test/yaml-language-server/: complex_dynamic_yml.json  medium_yml.json
test-suite/results-test/yamllint/: complex_dynamic_yml.json  medium_yml.json
