[workspace]
members = [
    "crates/truss-core",
    "crates/truss-cli",
    "crates/truss-lsp",
    "crates/truss-wasm",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Juan Patricio Marchetto"]
license = "MIT"
repository = "https://github.com/JuanMarchetto/truss"
