[workspace]
members = [
    "crates/truss-core",
    "crates/truss-cli",
    "crates/truss-lsp",
    "crates/truss-wasm",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Juan Patricio Marchetto"]
license = "MIT"
repository = "https://github.com/JuanMarchetto/truss"
homepage = "https://github.com/JuanMarchetto/truss"
description = "High-performance CI/CD pipeline validation engine for GitHub Actions workflows"
keywords = ["github-actions", "ci-cd", "linter", "validation", "yaml"]
categories = ["development-tools", "command-line-utilities"]
