[package]
name = "truss-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "truss"
path = "src/main.rs"

[dependencies]
truss-core = { path = "../truss-core" }
clap = { version = "4", features = ["derive"] }
rayon = "1.8"

