[package]
name = "truss-cli"
description = "CLI tool for validating GitHub Actions workflows"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "../../README.md"

[[bin]]
name = "truss"
path = "src/main.rs"

[dependencies]
truss-core = { path = "../truss-core" }
clap = { version = "4", features = ["derive"] }
glob = "0.3"
rayon = "1.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

