[package]
name = "truss-cli"
description = "CLI tool for validating GitHub Actions workflows"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "../../README.md"

[[bin]]
name = "truss"
path = "src/main.rs"

[dependencies]
truss-core = { path = "../truss-core" }
clap.workspace = true
glob = "0.3"
rayon.workspace = true
serde.workspace = true
serde_json.workspace = true

