[package]
name = "truss-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "truss_core"
path = "lib.rs"

[dependencies]
tree-sitter = "0.21"
tree-sitter-yaml = "0.7"
rayon = "1.8"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "parse"
harness = false
