[package]
name = "truss-core"
description = "Core validation engine for GitHub Actions workflows"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "../../README.md"

[lib]
name = "truss_core"
path = "lib.rs"

[dependencies]
tree-sitter.workspace = true
tree-sitter-yaml = "0.7"
rayon.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
glob = "0.3"

[dev-dependencies]
criterion.workspace = true

[[bench]]
name = "parse"
harness = false
