[package]
name = "truss-lsp"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "truss_lsp"
path = "lib.rs"

[[bin]]
name = "truss-lsp"
path = "src/main.rs"

[dependencies]
truss-core = { path = "../truss-core" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tree-sitter = "0.21"

