[package]
name = "truss-lsp"
description = "Language Server Protocol adapter for GitHub Actions workflow validation"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[lib]
name = "truss_lsp"
path = "lib.rs"

[[bin]]
name = "truss-lsp"
path = "src/main.rs"

[dependencies]
truss-core = { path = "../truss-core" }
serde.workspace = true
serde_json.workspace = true
tree-sitter.workspace = true

