[package]
name = "truss-wasm"
description = "WebAssembly bindings for GitHub Actions workflow validation"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[lib]
name = "truss_wasm"
path = "lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
truss-core = { path = "../truss-core" }
wasm-bindgen = "0.2"
serde.workspace = true
serde_json.workspace = true
